--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,9 @@ java_version=17
 checkstyle_version=10.16.0
 
 #Publishing settings
-maven_name=GradleTemplate
+maven_name=JarTransformer
 maven_group=net.lenni0451
-maven_version=1.0.0
-maven_description=A template for gradle projects
-github_repo=Lenni0451/GradleTemplate
+maven_version=1.0.0-SNAPSHOT
+maven_description=Gradle plugin for transforming libraries and output jars
+github_repo=Lenni0451/JarTransformer
 license=MIT License
