--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+asm = "9.8"
 
 [libraries]
 findbugs = { module = "com.google.code.findbugs:jsr305", version = "3.0.2" }
@@ -9,8 +10,14 @@ junit-bom = { module = "org.junit:junit-bom", version = "5.13.1" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 
+asm = { module = "org.ow2.asm:asm", version.ref = "asm" }
+asm-commons = { module = "org.ow2.asm:asm-commons", version.ref = "asm" }
+asm-tree = { module = "org.ow2.asm:asm-tree", version.ref = "asm" }
+asm-util = { module = "org.ow2.asm:asm-util", version.ref = "asm" }
+
 [bundles]
+asm = ["asm", "asm-commons", "asm-tree", "asm-util"]
 
 [plugins]
 classTokenReplacer = { id = "net.raphimc.class-token-replacer", version = "1.1.6" }
-templateProcessor = { id = "net.lenni0451.template-processor", version = "1.0.1" }
+gradlePluginPublish = { id = "com.gradle.plugin-publish", version = "1.2.1" }
