--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ checkstyle_version=10.16.0
 maven_name=JarTransformer
 maven_group=net.lenni0451
 maven_version=1.0.0-SNAPSHOT
-maven_description=Gradle plugin for transforming libraries and output jars
+maven_description=Gradle plugin for transforming libraries and (output) jar files
 github_repo=Lenni0451/JarTransformer
 license=MIT License
