--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compileOnly libs.lombok
     annotationProcessor libs.lombok
 
+    api libs.commons.asm
     api libs.bundles.asm
 }
