--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     annotationProcessor libs.lombok
 
     api libs.commons.asm
+    api libs.juniversalchardet
     api libs.bundles.asm
     api libs.bundles.classtransform
 }
