--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,8 +6,8 @@ classtransform = "1.14.1"
 findbugs = { module = "com.google.code.findbugs:jsr305", version = "3.0.2" }
 jetbrainsAnnotations = { module = "org.jetbrains:annotations", version = "26.0.2-1" }
 lombok = { module = "org.projectlombok:lombok", version = "1.18.42" }
-
 commons-asm = { module = "net.lenni0451.commons:asm", version = "1.9.0" }
+juniversalchardet = { module = "com.github.albfernandez:juniversalchardet", version = "2.5.0" }
 
 asm = { module = "org.ow2.asm:asm", version.ref = "asm" }
 asm-commons = { module = "org.ow2.asm:asm-commons", version.ref = "asm" }
