Change version for next release

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ checkstyle_version=10.16.0
 #Publishing settings
 maven_name=JarTransformer
 maven_group=net.lenni0451
-maven_version=1.1.0
+maven_version=1.1.1-SNAPSHOT
 maven_description=Gradle plugin for transforming libraries and (output) jar files
 github_repo=Lenni0451/JarTransformer
 license=MIT License
